# Modern-C-

./: CMakeLists.txt  README.md
10. 2D array/Practice_1/: problem_1.cpp  problem_3.cpp
10. 2D array/Practice_2/: problem_1.cpp
10. Multidimensional array/: a.out  problem_3
10. Multidimensional array/EasyChallenges/: problem_1  problem_1.cpp  problem_2.cpp  problem_3.cpp
10. Multidimensional array/MedToHardChall/: active_robot.cpp  find_mountains.cpp  flatten_3DArray.cpp  primes.cpp  problem_1.cpp
10. Multidimensional array/Practice_1/: problem_1.cpp  problem_2.cpp  problem_3.cpp
10. Multidimensional array/Practice_2/: Flattening_Array.cpp  greedy_robot.cpp
11. function/: ReplaceString.cpp
8. 1D array/Arrays_Practice2/: MostFreqNum.cpp  MostFreqNum_with_FreqArray.cpp
8. 1D array/EasyToMedChallenges/: Problem_1.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp
8. 1D array/HardChallenges/: max_sliding_window.cpp  problem_1.cpp
8. 1D array/MedChallenges/: problem_1.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_6.cpp
9. char array/EasyToMedChallenges/: problem_1.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp  problem_6.cpp
9. char array/HardChallenges/: problem_1.cpp
9. char array/MedChallenges/: problem_1.cpp  problem_2.cpp  problem_3.cpp
9. char array/practice/: p1.cpp  p2.cpp  p3.cpp
Problems & Homework/Sec_8/EasyToMedChallenges/: problem_2.cpp
Problems & Homework/Sec_8/MedChallenges/: problem_1.cpp
Sec_10/EasyChallenges/: problem_1.cpp  problem_2.cpp  problem_3.cpp
Sec_10/MedToHardChall/: problem_2.cpp
Sec_10/Practice_1/: problem_2.cpp
Sec_10/Practice_2/: problem_1.cpp
Sec_8/Arrays_Practice2/: MostFreqNum.cpp
Sec_8/EasyToMedChallenges/: Problem_1.cpp  problem_2.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp
Sec_8/HardChallenges/: problem_2.cpp
Sec_8/MedChallenges/: problem_1.cpp  problem_3.cpp  problem_4.cpp  problem_5.cpp
Sec_9/EasyToMedChallenges/: problem_1.cpp  problem_5.cpp
Sec_9/MedChallenges/: problem_1.cpp
