cmake_minimum_required(VERSION 3.28)
project(Modern_CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Modern_CPP
        "10. Multidimensional array/EasyChallenges/problem_1.cpp"
        "10. Multidimensional array/EasyChallenges/problem_2.cpp"
        "10. Multidimensional array/EasyChallenges/problem_3.cpp"
        "10. Multidimensional array/MedToHardChall/active_robot.cpp"
        "10. Multidimensional array/MedToHardChall/find_mountains.cpp"
        "10. Multidimensional array/MedToHardChall/flatten_3DArray.cpp"
        "10. Multidimensional array/MedToHardChall/primes.cpp"
        "10. Multidimensional array/Practice_1/problem_1.cpp"
        "10. Multidimensional array/Practice_1/problem_2.cpp"
        "10. Multidimensional array/Practice_1/problem_3.cpp"
        "10. Multidimensional array/Practice_2/Flattening_Array.cpp"
        "10. Multidimensional array/Practice_2/greedy_robot.cpp"
        "11. function/ReplaceString.cpp"
        "8. 1D array/Arrays_Practice2/MostFreqNum.cpp"
        "8. 1D array/Arrays_Practice2/MostFreqNum_with_FreqArray.cpp"
        "8. 1D array/EasyToMedChallenges/Problem_1.cpp"
        "8. 1D array/EasyToMedChallenges/problem_2.cpp"
        "8. 1D array/EasyToMedChallenges/problem_3.cpp"
        "8. 1D array/EasyToMedChallenges/problem_4.cpp"
        "8. 1D array/EasyToMedChallenges/problem_5.cpp"
        "8. 1D array/HardChallenges/max_sliding_window.cpp"
        "8. 1D array/HardChallenges/problem_1.cpp"
        "8. 1D array/MedChallenges/problem_1.cpp"
        "8. 1D array/MedChallenges/problem_2.cpp"
        "8. 1D array/MedChallenges/problem_3.cpp"
        "8. 1D array/MedChallenges/problem_4.cpp"
        "8. 1D array/MedChallenges/problem_5.cpp"
        "8. 1D array/MedChallenges/problem_6.cpp"
        "9. char array/EasyToMedChallenges/problem_1.cpp"
        "9. char array/EasyToMedChallenges/problem_2.cpp"
        "9. char array/EasyToMedChallenges/problem_3.cpp"
        "9. char array/EasyToMedChallenges/problem_4.cpp"
        "9. char array/EasyToMedChallenges/problem_5.cpp"
        "9. char array/EasyToMedChallenges/problem_6.cpp"
        "9. char array/HardChallenges/problem_1.cpp"
        "9. char array/MedChallenges/problem_1.cpp"
        "9. char array/MedChallenges/problem_2.cpp"
        "9. char array/MedChallenges/problem_3.cpp"
        "9. char array/practice/p1.cpp"
        "9. char array/practice/p2.cpp"
        "9. char array/practice/p3.cpp")
